; ModuleID = '/home/carl/AnghaBench/mpv/video/out/opengl/extr_context_glx.c_select_fb_config.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/opengl/extr_context_glx.c_select_fb_config.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vo = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.vo*, i32*, i32)* @select_fb_config to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @select_fb_config(%struct.vo* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca %struct.vo*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32**, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32**, align 8
  %13 = alloca i32, align 4
  store %struct.vo* %0, %struct.vo** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  %14 = load %struct.vo*, %struct.vo** %5, align 8
  %15 = getelementptr inbounds %struct.vo, %struct.vo* %14, i32 0, i32 0
  %16 = load %struct.TYPE_2__*, %struct.TYPE_2__** %15, align 8
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load %struct.vo*, %struct.vo** %5, align 8
  %20 = getelementptr inbounds %struct.vo, %struct.vo* %19, i32 0, i32 0
  %21 = load %struct.TYPE_2__*, %struct.TYPE_2__** %20, align 8
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 1
  %23 = load i32, i32* %22, align 4
  %24 = load i32*, i32** %6, align 8
  %25 = call i32** @glXChooseFBConfig(i32 %18, i32 %23, i32* %24, i32* %8)
  store i32** %25, i32*** %9, align 8
  %26 = load i32**, i32*** %9, align 8
  %27 = icmp ne i32** %26, null
  br i1 %27, label %29, label %28

28:                                               ; preds = %3
  store i32* null, i32** %4, align 8
  br label %83

29:                                               ; preds = %3
  %30 = load i32, i32* %8, align 4
  %31 = icmp sgt i32 %30, 0
  br i1 %31, label %32, label %36

32:                                               ; preds = %29
  %33 = load i32**, i32*** %9, align 8
  %34 = getelementptr inbounds i32*, i32** %33, i64 0
  %35 = load i32*, i32** %34, align 8
  br label %37

36:                                               ; preds = %29
  br label %37

37:                                               ; preds = %36, %32
  %38 = phi i32* [ %35, %32 ], [ null, %36 ]
  store i32* %38, i32** %10, align 8
  %39 = load i32, i32* %7, align 4
  %40 = icmp ne i32 %39, 0
  br i1 %40, label %41, label %79

41:                                               ; preds = %37
  store i32 0, i32* %11, align 4
  br label %42

42:                                               ; preds = %75, %41
  %43 = load i32, i32* %11, align 4
  %44 = load i32, i32* %8, align 4
  %45 = icmp slt i32 %43, %44
  br i1 %45, label %46, label %78

46:                                               ; preds = %42
  %47 = load %struct.vo*, %struct.vo** %5, align 8
  %48 = getelementptr inbounds %struct.vo, %struct.vo* %47, i32 0, i32 0
  %49 = load %struct.TYPE_2__*, %struct.TYPE_2__** %48, align 8
  %50 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %49, i32 0, i32 0
  %51 = load i32, i32* %50, align 4
  %52 = load i32**, i32*** %9, align 8
  %53 = load i32, i32* %11, align 4
  %54 = sext i32 %53 to i64
  %55 = getelementptr inbounds i32*, i32** %52, i64 %54
  %56 = load i32*, i32** %55, align 8
  %57 = call i32** @glXGetVisualFromFBConfig(i32 %51, i32* %56)
  store i32** %57, i32*** %12, align 8
  %58 = load i32**, i32*** %12, align 8
  %59 = icmp ne i32** %58, null
  br i1 %59, label %60, label %74

60:                                               ; preds = %46
  %61 = load i32**, i32*** %12, align 8
  %62 = call i32 @vo_x11_is_rgba_visual(i32** %61)
  store i32 %62, i32* %13, align 4
  %63 = load i32**, i32*** %12, align 8
  %64 = call i32 @XFree(i32** %63)
  %65 = load i32, i32* %13, align 4
  %66 = icmp ne i32 %65, 0
  br i1 %66, label %67, label %73

67:                                               ; preds = %60
  %68 = load i32**, i32*** %9, align 8
  %69 = load i32, i32* %11, align 4
  %70 = sext i32 %69 to i64
  %71 = getelementptr inbounds i32*, i32** %68, i64 %70
  %72 = load i32*, i32** %71, align 8
  store i32* %72, i32** %10, align 8
  br label %78

73:                                               ; preds = %60
  br label %74

74:                                               ; preds = %73, %46
  br label %75

75:                                               ; preds = %74
  %76 = load i32, i32* %11, align 4
  %77 = add nsw i32 %76, 1
  store i32 %77, i32* %11, align 4
  br label %42

78:                                               ; preds = %67, %42
  br label %79

79:                                               ; preds = %78, %37
  %80 = load i32**, i32*** %9, align 8
  %81 = call i32 @XFree(i32** %80)
  %82 = load i32*, i32** %10, align 8
  store i32* %82, i32** %4, align 8
  br label %83

83:                                               ; preds = %79, %28
  %84 = load i32*, i32** %4, align 8
  ret i32* %84
}

declare dso_local i32** @glXChooseFBConfig(i32, i32, i32*, i32*) #1

declare dso_local i32** @glXGetVisualFromFBConfig(i32, i32*) #1

declare dso_local i32 @vo_x11_is_rgba_visual(i32**) #1

declare dso_local i32 @XFree(i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
